--- a/public/faq.html
+++ b/public/faq.html
@@ -92,7 +92,8 @@
     <hr>
     <p><strong>Q1:</strong> 已经登录校园网账号，但仍无法连接网络，“用户自助服务系统”中未显示当前设备在线信息，怎么办？</p>
     <img src="./faq_assets/faq1.jpg" alt="FAQ1">
-    <p><strong>A1:</strong> 这种情况一般是仅登录了用户自助服务系统，实际上当前设备并未成功登录校园网。解决方法为：</p>
+    <p><strong>A1.1:</strong> 校园网本月使用流量为150G + nG，且余额不足 20 + n 元，特征为可用流量为0，解决方案为充值 </p>
+    <p><strong>A1.2:</strong> 仅登录了用户自助服务系统，实际上当前设备并未成功登录校园网。解决方法为：</p>
     <ol>
       <li><strong>法一：</strong>点击"注销登录"按钮后，访问 <a href="http://172.20.30.3/" target="_blank">http://172.20.30.3/</a> 重新登录；<br>
         <img src="./faq_assets/faq2.jpg" alt="FAQ2">
@@ -101,16 +102,16 @@
     </ol>
     <hr>
     <p><strong>Q2:</strong> “用户自助服务系统”里账户余额明明不是 0 元，为什么无法上网？</p>
-    <p><strong>A2:</strong> 不要看账户余额，看可用流量还剩多少，如果还剩 0M 那就是当月流量已耗尽。想继续用只能再充钱（超出部分 1 元 1GB，充钱后流量自动入账），到下个自然月重置）。</p>
+    <p><strong>A2:</strong> 不要看账户余额，看可用流量还剩多少，如果还剩 0M 那就是当月流量已耗尽。想继续用只能再充钱（超出部分 1 元 1GB，充钱后流量自动入账，到下个自然月重置）。</p>
     <hr>
     <p><strong>Q3:</strong> “用户自助服务系统”里可用流量明明不是 0M，为什么仍然无法上网？</p>
-    <p><strong>A3:</strong> 可能是因为账户余额不足（为 0 元）。如果充钱之后又出现了无法上网的问题，可能是因为当前计费方式不是按月计费。</p>
+    <p><strong>A3:</strong> 此时账号状态为临停，原因是账户余额不足（为 0 元）。如果充钱之后又出现了无法上网的问题，是因为当前计费方式不是按月计费。</p>
     <p>开发区校区校园网无法显式切换计费方式，当月采用哪种计费方式主要由账户余额决定，以下是校园网计费规则：</p>
     <ol>
       <li>余额 ≥ 20 元，且当月流量 ≤ 150G：正常使用，每月扣 20 元月租。</li>
-      <li>余额 A ＜ 20 元，且当月流量 ≤ 150G：按天计费，每天 0.67 元。每天凌晨系统自动结算，当余额 A ＜ 0.67×天数 时，账号会临时停用。充值 N 元后可恢复，系统结算后余额为 a = A + N - 0.67×天数，若 a ＞ 0.67，当天可上网。</li>
+      <li>余额 A ＜ 20 元，且当月流量 ≤ 150G：按天计费，每天 0.67 元。每天凌晨系统自动结算，当余额 A ＜ 0.67×已用天数 时，账号会临时停用。充值 N 元后可恢复，系统结算后余额为 a = A + N - 0.67×已用天数，若 a ＞ 0.67，当天可上网。</li>
       <li>余额充足但流量 ＞ 150G：月底系统会在月租 20 元基础上，再扣除超出部分的流量费 n 元，对应总流量为 150G + nG。</li>
-      <li>余额 A ＜ 20 元且流量 ＞ 150G：每天凌晨系统结算，当余额 A ＜ (0.67×天数 + n) 时账号临停。充值 N 元后恢复，系统结算后余额为 a = A + N - 0.67×天数 - n，若 a ＞ 0.67，当天可上网，可用流量约为 a - 0.67，次日凌晨系统继续按 0.67 元/天扣费。</li>
+      <li>余额 A ＜ 20 元且流量 = 150G + nG：每天凌晨系统结算，当余额 A ＜ (0.67×已用天数 + n) 时账号临停。充值 N 元后恢复，系统结算后余额为 a = A + N - 0.67×已用天数 - n，若 a ＞ 0.67，当天可上网，可用流量为 (a - 0.67)G，次日凌晨系统继续按 0.67 元/天扣费。</li>
     </ol>
     <hr>
     <p><strong>Q4:</strong> 为什么插上网线之后我的电脑就断网了？</p>
@@ -136,11 +137,7 @@
     <p><strong>Q9:</strong> i大工账号/校园邮箱账户/图书馆账户有问题登不上去，该向谁反映问题？</p>
     <p><strong>A9:</strong> 开发区校区网络服务办公室仅负责校区网络维护。涉及到大工公共网络资源的，请直接联系大连理工大学网络与信息化中心（办公地点在凌水校区，联系电话 <a href="tel:0411-84707014">0411-84707014</a>，联系邮箱 <a href="mailto:its@dlut.edu.cn">its@dlut.edu.cn</a>）。</p>
   </main>
-  
-  <footer>
-    &copy; 2025 校园网 FAQ
-  </footer>
- 
+  <footer> &copy; 2025 校园网 FAQ </footer>
 </body>
 
 </html>
